Set header width to 100% Set header in fixed position with background color to black and a z-index of 2

--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ box-sizing: border-box;}
     width: 1140px;
 }
 
+header {width: 100%;
+background-color: rgba(0, 0, 0, 0.6);
+position: fixed;
+z-index: 2;}
+
 
  /*
 body{
